# Vecalculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog.md  changelog.txt  config-cmake.md
.github/workflows/: mirror.yml
2.0/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
legacy/: CMakeLists.txt  README.MD  legacy_main.cpp
legacy/imports/: filtros.h  graficador.cpp  graficador.h  menu.cpp  operaciones.cpp
legacy/lib/: README.MD
legacy/qt/: mainwindow.cpp  mainwindow.ui
media/: diagrama-componentes.drawio  diagrama_componentes_qt.drawio  diagrama_qt.drawio  sources.qrc
src/: README.MD  data_types.h  filtros.h  main.cpp  main.h  menu.h  notas.txt  operaciones.h
src/imports/: README.MD  filtros.cpp  graficador.cpp  graficador.h  menu.cpp  menu.h  operaciones.cpp  operaciones.h  vectores.cpp  vectores.h
src/include/: Vecalculator_vectores.cpp  Vecalculator_vectores.h  operaciones.cpp  operaciones.h  vec_result.cpp  vec_result.h  vectores.cpp
src/lib/: qcustomplot.cpp  qcustomplot.h
src/qt/: demo.cpp  demo.h  demo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  op_select.cpp  op_select.ui  vecalculator.cpp  vecalculator.h  vecalculator.ui
src/qt/no_implementado/: op_select.cpp  op_select.h  readme.md
src/qt/operaciones/: demo.cpp  demo.h  demo.ui
